--- a/styles/home.css
+++ b/styles/home.css
@@ -14,15 +14,17 @@ header {
 
 #bg {
     grid-area: left;
-
     background: url('../assets/home-bg-img.svg') no-repeat top/contain;
+    background-position-x: -4.5rem;
+    background-position-y: -2rem;
 }
 
 main {
     grid-area: right;
 
     display: flex;
-    align-items: center;    
+    align-items: center; 
+    margin-top: -11.2rem;   
 }
 
 main .container {
@@ -44,4 +46,52 @@ input {
 input, button, .button {
     width: 100%;
     margin-bottom: 1.8rem;
+}
+
+/* Separator Line ===================== */
+.separator {
+    display: flex;
+    align-items: center;
+
+    margin: 4rem 0;
+}
+
+.separator div:nth-child(2) {
+    color: var(--grey-blue);
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    padding: 0 1.35rem;
+    line-height: 0;
+}
+
+.separator div:nth-child(1),
+.separator div:nth-child(3) {
+    background: var(--grey-blue);
+    width: 100%;
+    height: 1px;
+}
+
+/* Create balls ============== */
+.ball {
+    width: 21.2rem;
+    height: 21.2rem;
+    clip-path: circle();
+
+    background: var(--blue);
+    position: fixed;
+
+    opacity: 0.1;
+}
+
+.ball.top {
+    width: 63.3rem;
+    height: 63.3rem;
+
+    top: -46rem;
+    right: -35rem;
+}
+
+.ball.bottom {
+    bottom: -15rem;
+    right: 5.6rem;
 }
