update room.html and styles folder

--- a/styles/room.css
+++ b/styles/room.css
@@ -1,5 +1,5 @@
 .content {
-    max-width: 90%;
+    max-width: min(112rem, 90%);
 }
 
 #room header {
@@ -50,6 +50,7 @@
 #question-form form {
     border: .2rem solid var(--grey-blue);
     padding: 1.6rem;
+    margin-bottom: 1.6rem;
     border-radius: 0 .8rem .8rem .8rem;
 }
 
@@ -81,5 +82,67 @@
 }
 
 #question-form form footer > div img {
-    margin-left: 0.9rem;
+    margin-right: 0.9rem;
+}
+
+#question-form form footer button {
+    height: auto;
+    padding: .8rem 2.4rem;
+    line-height: 2.4rem;
+}
+
+/* Questions ================== */
+.question-wrapper {
+    background: var(--light-blue);
+    margin-bottom: .8rem;
+    border-radius: 0 .8rem .8rem .8rem;
+    padding: 2.4rem;
+}
+
+.question-wrapper .question-content {
+    display: flex;
+    align-items: flex-start;
+}
+
+.question-wrapper .question-content .user {
+    background: var(--blue);
+    clip-path: circle();
+    padding: 1.4rem;
+}
+
+.question-wrapper .question-content  p {
+    margin-left: 1.6rem;
+    word-break: break-word;
+    font-family: 'Open Sans', sans-serif;
+    display: flex;
+    align-items: center;
+    min-height: 5.5rem;
+}
+
+.question-wrapper .action {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.question-wrapper .action a {
+    display: flex;
+    align-items: center;
+}
+
+.question-wrapper .action > a + a{
+    margin-left: 1.8rem;
+}
+
+.question-wrapper .action > a > img {
+    margin-right: .8rem;
+}
+
+/* Questions read =============== */
+.question-wrapper.read {
+    background: var(--grey-medium);
+}
+
+.question-wrapper.read .question-content .user {
+    background: var(--grey-blue);
 }
