--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -7,8 +7,10 @@
     <title>Rocket.Q</title>
     
     <!-- CSS -->
-    <link rel="stylesheet" href="./styles/home.css">
-    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="/styles/home.css">
+    <link rel="stylesheet" href="/styles/global.css">
+    <link rel="stylesheet" href="/styles/modal.css">
+
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -19,7 +21,9 @@
 <body>
     <div id="home" class="content">
         <header>
-            <img src="./images/logo.svg" alt="Rocket.Q Logo">
+            <a href="/">
+                <img src="/images/logo.svg" alt="Rocket.Q Logo">
+            </a>
         </header>
         
         <div id="bg">
@@ -29,28 +33,8 @@
 
         <main>
             <div class="container">
-                <section>
-                    <h2>Entre como participante</h2>
-                    <form>
-                        <label class="sr-only" for="room-id">Código da sala</label>
-                        <input type="number" id="room-id" placeholder="Código da sala">
-                        <button><img src="./images/enter-room.svg" alt="Entrar na sala"> Entrar na sala</button>
-                    </form>
-                </section>
-                
-                <div class="separator">
-                    <div></div>
-                    <div>ou</div>
-                    <div></div>
-                </div>
-    
-                <section>
-                    <h2>Crie sua própria sala de forma fácil</h2>
-                    <a href="#" class="button outlined">
-                        <img src="./images/users.svg" alt="Criar Sala">
-                        Criar sala
-                    </a>
-                </section>
+                <!-- Vai renderizar a parte correta de acordo com a url-->
+                <%- include(`parts/${page}`)%>
             </div>
         </main>
     </div>
